--- a/index.html
+++ b/index.html
@@ -1,52 +1,62 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="UTF-8" />
         <meta
             name="viewport"
             content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=no"
         />
-        <title>LibreSpeed Example</title>
+        <meta charset="UTF-8" />
         <link rel="shortcut icon" href="favicon.ico" />
         <link rel="stylesheet" href="style.css" />
-        <script
-            src="https://code.jquery.com/jquery-3.4.1.js"
-            integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
-            crossorigin="anonymous"
-        ></script>
         <script type="text/javascript" src="speedtest.js"></script>
         <script type="text/javascript" src="script.js"></script>
+
+        <title>Speedtest</title>
     </head>
     <body>
         <h1>Speedtest</h1>
-        <div id="startStopBtn" onclick="startStop()"></div>
-        <div id="test">
-            <div class="testGroup">
-                <div class="testArea">
-                    <div class="testName">Download</div>
-                    <div id="dlText" class="meterText"></div>
-                    <div class="unit">Mbps</div>
+        <div id="testWrapper">
+            <div id="startStopBtn" onclick="startStop()"></div>
+            <div id="test">
+                <div class="testGroup">
+                    <div class="testArea2">
+                        <div class="testName">Ping</div>
+                        <div
+                            id="pingText"
+                            class="meterText"
+                            style="color:#AA6060"
+                        ></div>
+                        <div class="unit">ms</div>
+                    </div>
+                    <div class="testArea2">
+                        <div class="testName">Jitter</div>
+                        <div
+                            id="jitText"
+                            class="meterText"
+                            style="color:#AA6060"
+                        ></div>
+                        <div class="unit">ms</div>
+                    </div>
                 </div>
-                <div class="testArea">
-                    <div class="testName">Upload</div>
-                    <div id="ulText" class="meterText"></div>
-                    <div class="unit">Mbps</div>
+                <div class="testGroup">
+                    <div class="testArea">
+                        <div class="testName">Download</div>
+                        <canvas id="dlMeter" class="meter"></canvas>
+                        <div id="dlText" class="meterText"></div>
+                        <div class="unit">Mbps</div>
+                    </div>
+                    <div class="testArea">
+                        <div class="testName">Upload</div>
+                        <canvas id="ulMeter" class="meter"></canvas>
+                        <div id="ulText" class="meterText"></div>
+                        <div class="unit">Mbps</div>
+                    </div>
+                </div>
+                <div id="ipArea">
+                    <span id="ip"></span>
                 </div>
             </div>
-            <div class="testGroup">
-                <div class="testArea">
-                    <div class="testName">Ping</div>
-                    <div id="pingText" class="meterText"></div>
-                    <div class="unit">ms</div>
-                </div>
-                <div class="testArea">
-                    <div class="testName">Jitter</div>
-                    <div id="jitText" class="meterText"></div>
-                    <div class="unit">ms</div>
-                </div>
-            </div>
-            <div id="ipArea">IP Address: <span id="ip"></span></div>
+            <a href="https://github.com/librespeed/speedtest">Source code</a>
         </div>
-        <a href="https://github.com/librespeed/speedtest">Source code</a>
     </body>
 </html>
