--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
         <meta charset="UTF-8" />
         <link rel="shortcut icon" href="favicon.ico" />
         <link rel="stylesheet" href="style.css" />
+        <script
+            src="https://code.jquery.com/jquery-3.4.1.min.js"
+            integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+            crossorigin="anonymous"
+        ></script>
         <script type="text/javascript" src="speedtest.js"></script>
         <script type="text/javascript" src="script.js"></script>
 
