--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <span id="ip"></span>
                 </div>
             </div>
-            <a href="https://github.com/librespeed/speedtest">Source code</a>
+            <div>Provided by LibreSpeed</div>
         </div>
     </body>
 </html>
