--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <script type="text/javascript" src="speedtest.js"></script>
         <script type="text/javascript" src="script.js"></script>
 
-        <title>Speedtest</title>
+        <title>speedtest.fi</title>
     </head>
     <body>
         <div id="testWrapper">
