--- a/index.html
+++ b/index.html
@@ -6,15 +6,16 @@
             content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=no"
         />
         <meta charset="UTF-8" />
+
+        <link
+            rel="stylesheet"
+            href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+            integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+            crossorigin="anonymous"
+        />
+
         <link rel="shortcut icon" href="favicon.ico" />
         <link rel="stylesheet" href="style.css" />
-        <script
-            src="https://code.jquery.com/jquery-3.4.1.min.js"
-            integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-            crossorigin="anonymous"
-        ></script>
-        <script type="text/javascript" src="speedtest.js"></script>
-        <script type="text/javascript" src="script.js"></script>
 
         <title>speedtest.fi</title>
     </head>
@@ -49,5 +50,14 @@
             </div>
             <div>Provided by LibreSpeed</div>
         </div>
+
+        <script
+            src="https://code.jquery.com/jquery-3.4.1.min.js"
+            integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+            crossorigin="anonymous"
+        ></script>
+
+        <script type="text/javascript" src="speedtest.js"></script>
+        <script type="text/javascript" src="script.js"></script>
     </body>
 </html>
