--- a/index.html
+++ b/index.html
@@ -95,6 +95,6 @@
         ></script>
 
         <script type="text/javascript" src="speedtest.js"></script>
-        <script type="module" src="script.js"></script>
+        <script type="text/javascript" src="script.js"></script>
     </body>
 </html>
