--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
         <meta charset="UTF-8" />
 
         <link
+            href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+            crossorigin="anonymous"
+        />
+
+        <link
             href="https://cdn.ncsu.edu/brand-assets/fonts/include.css"
             rel="stylesheet"
         />
@@ -25,54 +32,64 @@
         <title>speedtest.fi</title>
     </head>
     <body>
-        <div class="header">
-            <div class="title">
-                speedtest.fi
-            </div>
-        </div>
-
-        <div id="test">
-            <div class="testGroup">
-                <div class="testArea2">
-                    <div class="testName">Ping</div>
-                    <div id="pingText" class="meterText"></div>
-                    <div class="unit">ms</div>
+        <div
+            class="main-content container-fluid d-flex flex-column justify-content-center"
+        >
+            <div class="header">
+                <div class="title">
+                    speedtest.fi
                 </div>
+            </div>
 
-                <div class="testArea2" id="ipArea">
-                    <div class="testName">
-                        IP <i class="fa fa-globe" aria-hidden="true"></i>
+            <div id="test">
+                <div class="testGroup">
+                    <div class="testArea2">
+                        <div class="testName">Ping</div>
+                        <div id="pingText" class="meterText"></div>
+                        <div class="unit">ms</div>
                     </div>
-                    <div class="meterText">
-                        <div id="ip">
-                            0.0.0.0
+
+                    <div class="testArea2" id="ipArea">
+                        <div class="testName">
+                            IP <i class="fa fa-globe" aria-hidden="true"></i>
+                        </div>
+                        <div class="meterText">
+                            <div id="ip">
+                                0.0.0.0
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="testGroup">
-                <div class="testArea" id="dl-meter-container">
-                    <div class="testName">Download</div>
-                    <canvas id="dlMeter" class="meter"></canvas>
-                    <div id="dlText" class="meterText"></div>
-                    <div class="unit">Mbps</div>
+                <div class="testGroup">
+                    <div class="testArea" id="dl-meter-container">
+                        <div class="testName">Download</div>
+                        <canvas id="dlMeter" class="meter"></canvas>
+                        <div id="dlText" class="meterText"></div>
+                        <div class="unit">Mbps</div>
+                    </div>
+                    <div class="testArea" id="ul-meter-container">
+                        <div class="testName">Upload</div>
+                        <canvas id="ulMeter" class="meter"></canvas>
+                        <div id="ulText" class="meterText"></div>
+                        <div class="unit">Mbps</div>
+                    </div>
                 </div>
-                <div class="testArea" id="ul-meter-container">
-                    <div class="testName">Upload</div>
-                    <canvas id="ulMeter" class="meter"></canvas>
-                    <div id="ulText" class="meterText"></div>
-                    <div class="unit">Mbps</div>
-                </div>
+                <div class="" id="startStopBtn">Go</div>
             </div>
-            <div class="hvr-underline-from-left" id="startStopBtn">Go</div>
+
+            <footer class="footer navbar-fixed-bottom">
+                <div class="providers">
+                    Provided by LibreSpeed - powered by MCNC - developed by the
+                    Friday Institute
+                </div>
+            </footer>
         </div>
 
-        <div class="footer">
-            <div class="providers">
-                Provided by LibreSpeed - powered by MCNC - developed by the
-                Friday Institute
-            </div>
-        </div>
+        <script
+            src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"
+            integrity="sha384-6khuMg9gaYr5AxOqhkVIODVIvm9ynTT5J4V1cfthmT+emCG6yVmEZsRHdxlotUnm"
+            crossorigin="anonymous"
+        ></script>
 
         <script
             src="https://code.jquery.com/jquery-3.4.1.min.js"
