--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
             </div> -->
 
                 <div
-                    class="hvr-underline-from-left"
+                    class="qualtrics-btn"
                     id="startStopBtn"
                     style="grid-area: button"
                 >
-                    Go
+                    Start
                 </div>
 
                 <div
