--- a/index.html
+++ b/index.html
@@ -43,20 +43,23 @@
             </div> -->
 
                 <div
-                    class="qualtrics-btn"
-                    id="startStopBtn"
+                    class="container-fluid center info-container"
                     style="grid-area: button"
                 >
-                    Start
+                    <div class="qualtrics-btn" id="startStopBtn">
+                        Start
+                    </div>
                 </div>
 
                 <div
-                    class="container-fluid center testArea2"
+                    class="container-fluid center info-container"
                     style="grid-area: ping"
                 >
-                    <div class="testName">Latency</div>
-                    <div id="pingText" class="meterText"></div>
-                    <div class="unit">ms</div>
+                    <div class="testArea2">
+                        <div class="testName">Latency</div>
+                        <div id="pingText" class="meterText"></div>
+                        <div class="unit">ms</div>
+                    </div>
                 </div>
 
                 <div
@@ -70,7 +73,7 @@
                     <div class="unit">Mbps</div>
                 </div>
 
-                <div
+                <!-- <div
                     class="container-fluid testArea"
                     id="ul-meter-container"
                     style="grid-area: upload"
@@ -79,7 +82,7 @@
                     <canvas id="ulMeter" class="meter"></canvas>
                     <div id="ulText" class="meterText"></div>
                     <div class="unit">Mbps</div>
-                </div>
+                </div> -->
             </div>
         </div>
 
