Just... A lot of changes, OK?

--- a/index.html
+++ b/index.html
@@ -84,22 +84,19 @@
                 </div>
 
                 <div class="container-fluid test-container" id="test-container">
-                    <div id="test-kind" class="test-kind">
-                        Speedtest
-                    </div>
+                    <div id="test-kind" class="test-kind"></div>
 
                     <canvas id="test-meter"></canvas>
 
                     <div class="info">
                         <div id="test-amount" class="amount">0</div>
-                        <div class="unit">mbps</div>
+                        <div id="test-amount-unit" class="unit">&nbsp;</div>
                     </div>
                 </div>
 
                 <div class="container-fluid test-container tmp" id="tmp">
                     <div class="text">
-                        Thank you for completing the speed test! Click continue
-                        to progress onward.
+                        Speed test complete. Click the "next" button to finish the survey.
                     </div>
                     <i class="fa fa-check" aria-hidden="true"></i>
                 </div>
