Minor fixes to CSS.

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
                     <div class="info">
                         <div id="test-amount" class="amount">0</div>
-                        <div id="test-amount-unit" class="unit">&nbsp;</div>
+                        <div id="test-amount-unit" class="unit">Mbps</div>
                     </div>
                 </div>
 
