--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
             </div> -->
 
             <div class="container-fluid main-content" id="main-content">
-                <div class="container-fluid start-btn-container">
+                <div
+                    class="container-fluid d-flex justify-content-center start-btn-container"
+                >
                     <div class="start-btn" id="start-btn">
                         Start
                         <div class="pulse"></div>
@@ -96,7 +98,8 @@
 
                 <div class="container-fluid test-container tmp" id="tmp">
                     <div class="text">
-                        Speed test complete. Click the "next" button to finish the survey.
+                        Speed test complete. Click the "next" button to finish
+                        the survey.
                     </div>
                     <i class="fa fa-check" aria-hidden="true"></i>
                 </div>
