Fixed absolute CSS sizing (somewhat)!

--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
 
     <body>
         <div
-            class="container-fluid d-flex justify-content-center align-items-center outer-content"
+            class="outer-content"
         >
-            <div class="container-fluid main-content" id="main-content">
+            <div class="main-content" id="main-content">
                 <div
-                    class="container-fluid d-flex justify-content-center start-btn-container"
+                    class=" start-btn-container"
                 >
                     <div class="start-btn" id="start-btn">
                         Start
@@ -42,7 +42,7 @@
                     </div>
                 </div>
 
-                <div class="container-fluid test-info-container box-shadow">
+                <div class="test-info-container box-shadow">
                     <div class="info">
                         <div class="test-kind">Latency</div>
 
@@ -82,14 +82,13 @@
                 </div>
 
                 <div
-                    class="container-fluid test-container box-shadow"
+                    class="test-container box-shadow"
                     id="test-container"
                 >
                     <canvas id="test-meter"></canvas>
 
                     <div class="info">
                         <div id="test-kind" class="test-kind"></div>
-
                         <div class="unit-container">
                             <div id="test-amount" class="amount">0</div>
                             <div id="test-amount-unit" class="unit">Mbps</div>
