--- a/tmp.html
+++ b/tmp.html
@@ -1,36 +1,30 @@
-<div>
-    This five minute survey is being conducted by the
-    <strong>North Carolina Broadband Infrastructure Office</strong>, in
-    partnership with the
-    <strong>Friday Institute at NC State University</strong>.&nbsp; It was
-    developed in cooperation with the <b>NC Farm Bureau Federation</b>. The
-    survey gathers data on internet connectivity from North Carolina farmers.
-    The data will be used to inform further research and policy recommendations
-    that will assist farms and communities where internet access is inadequate.
-</div>
-<div><br /></div>
-<font color="orange"
-    ><div>
-        <strong
-            ><em
-                >If your farm office currently has internet service, please take
-                this survey from that location.</em
-            ></strong
-        >
-    </div></font
->
-<div><br /></div>
-<div>
-    <div>
-        Your farm office address is critical to identifying underserved farms.
-        We ask that you provide the street address of the farm office to help us
-        identify areas needing improved internet access.&nbsp;&nbsp;
-    </div>
-    <div>Farm office locations may be:&nbsp;</div>
-    <div>- mapped to show unmet needs or demand for high speed internet</div>
-    <div>
-        - shared with relevant internet service providers or other partners to
-        identify service solutions
-    </div>
-</div>
-<div>- included in a public map, with location points buffered for privacy</div>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <title>Document</title>
+        <link rel="stylesheet" href="tmp.css" />
+    </head>
+    <body>
+        We will now test the speed of your current internet connection. This
+        test may use up to 100 MB of data.
+        <div>
+            <br />If you have a low data cap or would like to skip the speed
+            test, press the green Next button at the lower right side of the
+            screen. Otherwise, press the green Start button.<br />
+
+            <div class="container">
+                <iframe src="./index.html"></iframe>
+            </div>
+
+            <em>
+                <div>
+                    Please wait until the test finishes before pressing the Next
+                    button, otherwise your test results will not be recorded.
+                </div></em
+            >
+        </div>
+    </body>
+</html>
