We're getting there!

--- a/tmp.html
+++ b/tmp.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <title>Document</title>
-        <link rel="stylesheet" href="tmp.css" />
+        <link rel="stylesheet" href="styles/tmp.css" />
     </head>
     <body>
         We will now test the speed of your current internet connection. This
