--- a/index.html
+++ b/index.html
@@ -14,12 +14,10 @@
             crossorigin="anonymous"
         />
 
-        <link
-            href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-            rel="stylesheet"
-            integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
+        <script
+            src="https://kit.fontawesome.com/f3238cd59c.js"
             crossorigin="anonymous"
-        />
+        ></script>
 
         <link rel="shortcut icon" href="favicon.ico" />
         <link rel="stylesheet" href="styles/style.css" />
@@ -77,7 +75,10 @@
                     </div>
                 </div>
 
-                <div class="test-container box-shadow" id="test-container">
+                <div
+                    class="test-container box-shadow pane-end"
+                    id="test-container"
+                >
                     <div class="square-box">
                         <canvas id="test-meter"></canvas>
                     </div>
@@ -92,7 +93,7 @@
                 </div>
 
                 <div
-                    class="test-container complete-modal box-shadow"
+                    class="test-container box-shadow pane pane-end"
                     id="complete-modal"
                 >
                     <div class="text">
@@ -102,6 +103,17 @@
                         Click the Next button to finish the survey.
                     </div>
                     <i class="fa fa-check" aria-hidden="true"></i>
+                </div>
+
+                <div
+                    class="test-container box-shadow pane pane-start"
+                    id="start-modal"
+                >
+                    <div class="text">
+                        If you have a low data cap or would like to skip the
+                        speed test, press the Next button, otherwise, press the
+                        Start button.
+                    </div>
                 </div>
             </div>
         </div>
