Added start info text

--- a/index.html
+++ b/index.html
@@ -110,6 +110,12 @@
                     id="start-modal"
                 >
                     <div class="text">
+                        We will now test the speed of your current internet
+                        connection. This test may use up to 100 MB of data.
+
+                        <br />
+                        <br />
+
                         If you have a low data cap or would like to skip the
                         speed test, press the Next button, otherwise, press the
                         Start button.
