minor animation changes

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
                         </div>
                     </div>
 
-                    <div class="info dl-icon">
-                        <div class="test-kind">
+                    <div class="info test-icon">
+                        <div class="test-kind dl">
                             Download
                             <i
                                 class="fa fa-arrow-circle-o-down"
@@ -60,11 +60,11 @@
                         </div>
                     </div>
 
-                    <div class="info ul-icon">
-                        <div class="test-kind">
+                    <div class="info test-icon">
+                        <div class="test-kind ul">
                             Upload
                             <i
-                                class="fa fa-arrow-circle-o-down ul-icon"
+                                class="fa fa-arrow-circle-o-down"
                                 aria-hidden="true"
                             ></i>
                         </div>
@@ -76,14 +76,14 @@
                 </div>
 
                 <div
-                    class="test-container box-shadow pane-end"
+                    class="test-container box-shadow"
                     id="test-container"
                 >
                     <div class="square-box">
                         <canvas id="test-meter"></canvas>
                     </div>
 
-                    <div class="info">
+                    <div class="info test-icon">
                         <div id="test-kind" class="test-kind"></div>
                         <div class="unit-container">
                             <div id="test-amount" class="amount">0</div>
@@ -97,16 +97,16 @@
                     id="complete-modal"
                 >
                     <div class="text">
-                        <h1>
+                        <h2>
                             Speed test complete!
-                        </h1>
+                        </h2>
                         Click the Next button to finish the survey.
                     </div>
                     <i class="fa fa-check" aria-hidden="true"></i>
                 </div>
 
                 <div
-                    class="test-container box-shadow pane pane-start"
+                    class="test-container box-shadow pane pane-end"
                     id="start-modal"
                 >
                     <div class="text">
