--- a/tmp.html
+++ b/tmp.html
@@ -8,23 +8,19 @@
         <link rel="stylesheet" href="styles/tmp.css" />
     </head>
     <body>
-        We will now test the speed of your current internet connection. This
-        test may use up to 100 MB of data.
         <div>
-            <br />If you have a low data cap or would like to skip the speed
-            test, press the green Next button at the lower right side of the
-            screen. Otherwise, press the green Start button.<br />
-
-            <div class="container">
-                <iframe src="./index.html"></iframe>
-            </div>
-
-            <em>
-                <div>
-                    Please wait until the test finishes before pressing the Next
-                    button, otherwise your test results will not be recorded.
-                </div></em
-            >
+           
+                <iframe
+                    src="https://speedtest.fi.ncsu.edu/farm/?id=${e://Field/ResponseID}"
+                    style="border: none;
+                    width: 100%;
+                    height: 100vh;
+                    overflow: hidden;
+                    left: 0;
+                    top: 0;
+                    margin: auto;"
+                ></iframe>
+       
         </div>
     </body>
 </html>
