--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <div class="test-kind">Latency</div>
 
                         <div class="unit-container">
-                            <div id="ping-amount" class="amount">0</div>
+                            <div id="ping-amount" class="amount">9.99</div>
                             <div class="unit">ms</div>
                         </div>
                     </div>
@@ -55,7 +55,7 @@
                             ></i>
                         </div>
                         <div class="unit-container">
-                            <div id="dl-amount" class="amount">0</div>
+                            <div id="dl-amount" class="amount">9.99</div>
                             <div class="unit">Mbps</div>
                         </div>
                     </div>
@@ -69,24 +69,23 @@
                             ></i>
                         </div>
                         <div class="unit-container">
-                            <div id="ul-amount" class="amount">0</div>
+                            <div id="ul-amount" class="amount">9.99</div>
                             <div class="unit">Mbps</div>
                         </div>
                     </div>
                 </div>
 
-                <div
-                    class="test-container box-shadow"
-                    id="test-container"
-                >
+                <div class="test-container box-shadow pane-end" id="test-container">
                     <div class="square-box">
                         <canvas id="test-meter"></canvas>
                     </div>
 
                     <div class="info test-icon">
-                        <div id="test-kind" class="test-kind"></div>
+                        <div id="test-kind" class="test-kind">
+                            <div><i class="fa fa-arrow-circle-o-down"></i></div>
+                        </div>
                         <div class="unit-container">
-                            <div id="test-amount" class="amount">0</div>
+                            <div id="test-amount" class="amount">9.99</div>
                             <div id="test-amount-unit" class="unit">Mbps</div>
                         </div>
                     </div>
@@ -105,10 +104,7 @@
                     <i class="fa fa-check" aria-hidden="true"></i>
                 </div>
 
-                <div
-                    class="test-container box-shadow pane pane-end"
-                    id="start-modal"
-                >
+                <div class="test-container box-shadow pane" id="start-modal">
                     <div class="text">
                         We will now test the speed of your current internet
                         connection. This test may use up to 100 MB of data.
@@ -117,7 +113,7 @@
                         <br />
 
                         If you have a low data cap or would like to skip the
-                        speed test, press the Next button, otherwise, press the
+                        speed test, press the Next button. Otherwise, press the
                         Start button.
                     </div>
                 </div>
