--- a/index.html
+++ b/index.html
@@ -36,46 +36,53 @@
                     </div>
                 </div>
 
-                <div class="test-info-container box-shadow">
-                    <div class="info">
-                        <div class="test-kind">Latency</div>
+                <div class="container-fluid">
+                    <div class="test-info-container box-shadow">
+                        <div class="info">
+                            <div class="test-kind">Latency</div>
 
-                        <div class="unit-container">
-                            <div id="ping-amount" class="amount">0</div>
-                            <div class="unit">ms</div>
+                            <div class="unit-container">
+                                <div id="ping-amount" class="amount">0</div>
+                                <div class="unit">ms</div>
+                            </div>
+                        </div>
+
+                        <div class="info test-icon">
+                            <div class="test-kind dl">
+                                Download
+                                <i
+                                    class="fa fa-arrow-circle-o-down"
+                                    aria-hidden="true"
+                                ></i>
+                            </div>
+                            <div class="unit-container">
+                                <div id="dl-amount" class="amount">0</div>
+                                <div class="unit">Mbps</div>
+                            </div>
+                        </div>
+
+                        <div class="info test-icon">
+                            <div class="test-kind ul">
+                                Upload
+                                <i
+                                    class="fa fa-arrow-circle-o-down"
+                                    aria-hidden="true"
+                                ></i>
+                            </div>
+                            <div class="unit-container">
+                                <div id="ul-amount" class="amount">0</div>
+                                <div class="unit">Mbps</div>
+                            </div>
                         </div>
                     </div>
 
-                    <div class="info test-icon">
-                        <div class="test-kind dl">
-                            Download
-                            <i
-                                class="fa fa-arrow-circle-o-down"
-                                aria-hidden="true"
-                            ></i>
-                        </div>
-                        <div class="unit-container">
-                            <div id="dl-amount" class="amount">0</div>
-                            <div class="unit">Mbps</div>
-                        </div>
-                    </div>
-
-                    <div class="info test-icon">
-                        <div class="test-kind ul">
-                            Upload
-                            <i
-                                class="fa fa-arrow-circle-o-down"
-                                aria-hidden="true"
-                            ></i>
-                        </div>
-                        <div class="unit-container">
-                            <div id="ul-amount" class="amount">0</div>
-                            <div class="unit">Mbps</div>
-                        </div>
-                    </div>
+                    <div class="progress-bar-container" id="progress-bar"></div>
                 </div>
 
-                <div class="test-container box-shadow pane-end" id="test-container">
+                <div
+                    class="test-container box-shadow pane-end"
+                    id="test-container"
+                >
                     <div class="square-box">
                         <canvas id="test-meter"></canvas>
                     </div>
