And some portrait changes.

--- a/index.html
+++ b/index.html
@@ -36,9 +36,7 @@
                     </div>
                 </div>
 
-                <div
-                    class="container-fluid flex-column d-flex constrained-container"
-                >
+                <div class="container-fluid flex-column d-flex constrained-container">
                     <div class="test-info-container box-shadow">
                         <div class="info">
                             <div class="test-kind">Latency</div>
