Added unit in progress color.

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         <div class="info">
                             <div class="test-kind">Latency</div>
 
-                            <div class="unit-container">
+                            <div class="unit-container in-progress">
                                 <div id="ping-amount" class="amount">0</div>
                                 <div class="unit">ms</div>
                             </div>
@@ -63,7 +63,7 @@
                                     aria-hidden="true"
                                 ></i>
                             </div>
-                            <div class="unit-container">
+                            <div class="unit-container in-progress">
                                 <div id="dl-amount" class="amount">0</div>
                                 <div class="unit">Mbps</div>
                             </div>
@@ -77,7 +77,7 @@
                                     aria-hidden="true"
                                 ></i>
                             </div>
-                            <div class="unit-container">
+                            <div class="unit-container in-progress">
                                 <div id="ul-amount" class="amount">0</div>
                                 <div class="unit">Mbps</div>
                             </div>
